--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,5 +20,23 @@ body {
 
 /* Custom style */
 
+header {
+    width: 100%;
+    height: 25%;
+
+}
+
+header #logo {
+    width: 80px; 
+    height: 80px; 
+    overflow: hidden; 
+    border-radius: 50%;
+    /* z-index: 200; */
+}
+
+header #title {
+    font-size: 25px;
+    font-weight: 400;
+}
 
 /* Media Query */
