--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,16 +17,22 @@ body {
 
 /* Global Classes */
 
+.hide {
+    display: none;
+}
 
 /* Custom style */
 
-header {
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
     width: 100%;
     height: 25%;
-
 }
 
-header #logo {
+.header #logo {
     width: 80px; 
     height: 80px; 
     overflow: hidden; 
@@ -34,10 +40,41 @@ header #logo {
     /* z-index: 200; */
 }
 
-header #title {
+.header #title {
     font-size: 25px;
-    font-weight: 400;
+    font-weight: 600;
+    flex-grow: 0.5;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .earth {
+    width: 360px; 
+    height: 360px; 
+    overflow: hidden; 
+    border-radius: 50%;
+}
+
+#search-area {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#search-city {
+    width: 2fr;
+}
+
+#search-btn {
+    width: 1fr;
+}
+
 #map{
     width: 500px;
     height: 500px;
