--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@ html, body {
 }
 
 body {
-    font-family: sans-serif;
+    font-family: "Kanit" !important;
+    background-color: #e9c8d3 !important ;
 }
 
 /* Global Classes */
@@ -25,19 +26,44 @@ body {
 
 .header {
     display: flex;
+    font-size: 20px;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    height: 25%;
+    height: 15%;
+    background-color: #4d6a3c;
+    color: #5a1e26;
+    border-color: #1b1816 !important;
 }
 
+h2{
+    border-top: 5px solid #e9ddc8;
+    padding: 100px 0 20px 0 !important;
+    margin: 20px !important;
+}
+
+h1{
+    color: #e9c8d3 !important;
+}
+header{
+    position: fixed;
+}
 .header #logo {
-    width: 80px; 
-    height: 80px; 
+    width: 96px; 
+    height: 120px; 
     overflow: hidden; 
-    border-radius: 50%;
     /* z-index: 200; */
+}
+
+.btn{
+    background-color: #4d6a3c!important  ;
+    border-radius: 10px !important;
+    border-color: #4d6a3c !important;
+    border-bottom: 2px solid #5a1e26 !important;
+    border-bottom: 4px solid #5a1e26 !important;
+    color: #e9c8d3 !important;
+
 }
 
 .header #title {
@@ -49,15 +75,7 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-}
-
-.container .earth {
-    width: 360px; 
-    height: 360px; 
-    overflow: hidden; 
-    border-radius: 50%;
 }
 
 #search-area {
@@ -69,16 +87,125 @@ body {
 
 #search-city {
     width: 2fr;
+    margin: -20px;
 }
 
 #search-btn {
     width: 1fr;
+    length: 100px !important;
+    font-size: 20px;
+    background-color:  #5a1e26;
+    border-radius: 10px;
+    border-color: #4d6a3c;
+    border-bottom: 8px solid #4d6a3c;
+    color: #e9c8d3 !important ;
+    padding: 5px 75px;
+    margin: 20px;
+    position: center;
+    padding-left: 60%;
+}
+
+#city {
+    font-size: 20px;
+    width: 100%;
+    border-radius: 5px;
+    border: 2px solid black;
+    height: 50px;
+    padding-bottom: 5px;
+    padding-top: 0px;
+    padding-left: 5px;
 }
 
 #map{
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
 }
 
+  /* Category Grid CSS */
+
+  #categoryGrid {
+    margin: 0px 5%;
+    display: grid;
+    grid-template-rows: 400px 400px 400px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas:
+    "London London London"
+    "Madrid Madrid Paris"
+    "Amsterdam Amsterdam Berlin";
+  }
+  
+  #London {
+    border-top: 9px solid #e9ddc8;
+    grid-area: London;
+    background-image: url("../images/london.jpg");
+  
+  }
+  #Madrid{
+    border-top: 9px solid #e9ddc8;
+    grid-area: Madrid;
+    background-image: url("../images/madrid.jpg");
+  }
+  
+  #Paris {
+    border-top: 9px solid #e9ddc8;
+    grid-area: Paris;
+    background-image: url("../images/paris.jpg");
+  }
+  
+  #Amsterdam {
+    border-top: 9px solid #e9ddc8;
+    grid-area: Amsterdam;
+    background-image: url("../images/amsterdam.jpg");
+  }
+  
+  #Berlin {
+    border-top: 9px solid #e9ddc8;
+    grid-area: Berlin;
+    background-image: url("../images/berlin.jpg");
+  }
+  
+  .categoryGridArea {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 5px;
+    cursor: pointer;
+    display: grid;
+    align-content: end;
+  }
+  
+  .heading {
+    background-color: rgba(0,0,0,0.7);
+    padding: 35px;
+    height: 25px;
+    color: white;
+    font-size: 25px;
+    border-bottom: 19px solid#4d6a3c;
+  }
+  
+ 
+  @media screen and (max-width:600px) {
+ 
+    #categoryGrid {
+      margin: 0px 5%;
+      display: grid;
+      grid-template-rows: 500px 500px 500px 500px 800px;
+      grid-template-columns: 1fr;
+      grid-template-areas: 
+      "London"
+      "Madrid"
+      "Paris"
+      "Amsterdam"
+      "Berlin";
+    }
+  }
+
+/* Footer */
+.footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 3%;
+}
 
 /* Media Query */
