--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
 /* Roots */
+/* Add variables for main colours */
+:root {
+  --primary_colour: #4d6a3c;
+  --secondary_colour: #e9ddc8;
+  --third_colour: #5a1e26;
+}
 
 /* Resets */
 *{
