--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,20 @@ h2{
     padding-left: 5px;
 }
 
+.weathersection {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 15px;
+    margin-top: 15px;
+}
+
+  .weather-card {
+    padding: 10px;
+    color: var(--primary_colour);
+    background-color: var(--secondary_colour);
+    border-radius: 5px;
+}
+
 #map{
     width: 100%;
     height: 100%;
