--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,13 +46,11 @@ h1{
 }
 
 h2{
-    border-top: 5px solid #e9ddc8;
-    padding: 120px 0 20px 0 !important;
-    margin: 20px !important;
+  margin: 20px !important;
 }
 
 .header{
-    position: fixed;
+    position: top fixed;
     max-height: 12%;
 }
 .header #logo {
@@ -110,6 +108,57 @@ h2{
     padding-left: 5px;
 }
 
+.col1 {
+  display: grid;
+  grid-template-rows: 800px 200px;
+  grid-template-columns: 6fr 1fr;
+  gap: 30px;
+  grid-template-areas:
+    "map map map map aside"
+    "weather weather weather weather aside";
+}
+
+#map {
+  grid-area: map;
+  width: 100%;
+  height: 100%;
+}
+.col2 {
+  grid-area: aside;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.aside {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+
+#five-day {
+  grid-area: weather;
+}
+
+.weathersection {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 15px;
+  margin-top: 25px;
+}
+
+.weather-card {
+  padding: 10px;
+  color: var(--primary_colour);
+  background-color: var(--secondary_colour);
+  border-radius: 5px;
+}
+
+#map {
+  grid-area: map;
+  margin-top: 50px;
+}
+
 .weathersection {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -122,11 +171,6 @@ h2{
     color: var(--primary_colour);
     background-color: var(--secondary_colour);
     border-radius: 5px;
-}
-
-#map{
-    width: 100%;
-    height: 100%;
 }
 
   /* Category Grid CSS */
