--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,7 @@ h2 {
   grid-template-rows: 700px 200px;
   grid-template-columns: 6fr 1fr;
   gap: 30px;
+  margin-bottom: 30px;
   grid-template-areas:
     "map map map map aside"
     "weather weather weather weather aside";
@@ -115,8 +116,7 @@ h2 {
 
 #map {
   grid-area: map;
-  width: 100%;
-  height: 100%;
+  
 }
 .col2 {
   grid-area: aside;
