responsiveness for smaller than 600px done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ h2 {
 
 #map {
   grid-area: map;
-  
+  margin-top: 50px;  
 }
 .col2 {
   grid-area: aside;
@@ -149,13 +149,7 @@ h2 {
   border-radius: 5px;
 }
 
-#map {
-  grid-area: map;
-  margin-top: 50px;
-}
-
 /* Category Grid CSS */
-
 #categoryGrid {
   margin: 0px 5%;
   display: grid;
@@ -215,6 +209,15 @@ h2 {
   border-bottom: 19px solid#4d6a3c;
 }
 
+/* Footer */
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3%;
+}
+
+/* Media Query */
 @media screen and (max-width: 600px) {
   #categoryGrid {
     margin: 0px 5%;
@@ -228,14 +231,22 @@ h2 {
       "Amsterdam"
       "Berlin";
   }
-}
+  .weathersection {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 50px;
+    gap: 20px;
+    margin-bottom: 20px;
+  }
 
-/* Footer */
-.footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 3%;
+  .col1 {
+    display: grid;
+    grid-template-rows: 700px 150px 300px;
+    grid-template-columns: 1fr;
+    margin-bottom: 20px;
+    grid-template-areas:
+      "map"
+      "weather"
+      "aside";
+  }
 }
-
-/* Media Query */
