--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,10 +68,15 @@ h2 {
   color: rgb(255, 255, 255) !important;
 }
 
-.container {
+.container-1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.container-2 {
+    width: 95%;
+    margin: 0 auto;
 }
 
 #search-city {
