--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ body {
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  height: 15%;
+  height: 25% !important;
   background-color: #4d6a3c;
   color: white;
   border-color: #1b1816 !important;
@@ -57,6 +57,7 @@ h2 {
 .header #logo {
   height: 6em;
   overflow: hidden;
+  padding: 1%;
   /* z-index: 200; */
 }
 
@@ -129,13 +130,19 @@ h2 {
   border-color: #4d6a3c !important;
   border-bottom: 2px solid #5a1e26 !important;
   border-bottom: 4px solid #5a1e26 !important;
-  color: rgb(255, 255, 255) !important;
+  color: #e9c8d3 !important;
+}
+
+.btn:hover{
+  background-color: #4d6a3c!important ;
+  transition: 0.7s!important ;
 }
 
 .welcome h2 {
   font-size: 2rem;
   text-transform: uppercase;
   letter-spacing: 10px;
+  padding: 5% 0 1% 0;
 }
 
 .container-1 {
@@ -158,17 +165,24 @@ h2 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  padding: 0 0 2% 0;
 }
 
 #search-btn {
   font-size: 20px;
-  background-color: #5a1e26;
+  background-color: #4d6a3c;
   border-radius: 10px;
   color: rgb(255, 255, 255) !important ;
   box-shadow: 5px color #4d6a3c;
   padding: 5px 75px;
   margin: 20px;
   position: center;
+  border-bottom: 6px solid #5a1e26 !important;
+}
+
+#search-btn:hover {
+  background-color: #5a1e26;
+  transition: 0.7s;
 }
 
 #city {
