--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,7 +337,7 @@ footer {
 
 /* Media Query */
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1200px) {
   #categoryGrid {
     margin: 0px 5%;
     display: grid;
@@ -369,6 +369,39 @@ footer {
       "aside";
   }
 }
+/* 
+@media screen and (max-width: 1200px) {
+  #categoryGrid {
+    margin: 0px 5%;
+    display: grid;
+    grid-template-rows: 500px 500px 500px 500px 800px;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "London"
+      "Madrid"
+      "Paris"
+      "Amsterdam"
+      "Berlin";
+  }
+  .weathersection {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 50px;
+    gap: 20px;
+    margin-bottom: 20px;
+  }
+
+  .col1 {
+    display: grid;
+    grid-template-rows: 700px 500px 700px;
+    grid-template-columns: 1fr;
+    margin-bottom: 20px;
+    grid-template-areas:
+      "map"
+      "weather"
+      "aside";
+  }
+} */
 
 /* Animation */
 
