--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 /* Add variables for main colours */
 :root {
   --primary_colour: #4d6a3c;
+  --primary-pink-color: #cd8390;
   --secondary_colour: #e9ddc8;
   --third_colour: #5a1e26;
 }
@@ -15,11 +16,11 @@
 
 html,
 body {
-  height: 100%;
-  width: 100%;
-  min-height: 100vh;
-  background-color: #e9c8d3 !important ;
   font-family: "Raleway", sans-serif !important;
+}
+
+body {
+  min-height: 100%;
 }
 
 /* Global Classes */
@@ -28,28 +29,26 @@ body {
   display: none;
 }
 
+h2 {
+  margin: 20px !important;
+}
+
+.row,
+.column {
+  display: flex;
+}
+.column {
+  flex-direction: column;
+}
+
 /* Custom style */
 
 .header {
-  position: top fixed;
-  height: fit-content;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
   display: flex;
-  font-size: 25px;
-  flex-direction: row;
-  justify-content: space-evenly;
   align-items: center;
-  width: 100%;
-  background-color: #4d6a3c;
-  color: white;
-  border-color: #1b1816 !important;
-}
-
-h1 {
-  color: #e9c8d3 !important;
-}
-
-h2 {
-  margin: 20px !important;
+  font-size: clamp(0.5rem, 1.4vw, 4rem);
 }
 
 .name h1 {
@@ -66,17 +65,33 @@ h2 {
   font-weight: bold;
   text-transform: uppercase;
   font-size: 1rem;
-  text-align: right;
 }
 
-.header #logo {
-  height: clamp(3rem, 8vw, 10rem);
-  padding: 1%;
-  /* z-index: 200; */
+.logo {
+  height: clamp(3rem, 5.3vw, 10rem);
+  margin-left: 1em;
+}
+
+.navbar {
+  padding: 0 !important;
+  text-align: center;
+  width: 100%;
+}
+
+.navbar-color {
+  /* background-color: #6B646C; */
+  background-color: #e6e6e6;
+}
+
+.navbar-nav li:last-of-type a {
+  color: var(--primary-pink-color);
+}
+
+.dropdown-toggle::after {
+  display: none !important;
 }
 
 .dropdown-menu {
-  /* transform: translate3d(-130px, 46px, 0px) !important; */
   background-color: rgba(255, 255, 255, 0.695) !important ;
   border-radius: 10px;
   color: rgb(255, 255, 255);
@@ -117,6 +132,49 @@ h2 {
   font-size: 1rem;
   font-weight: 600;
   text-align: center;
+}
+
+.hero {
+  position: relative;
+  min-height: 70vh;
+}
+
+.blurred-background {
+  background-image: url("../images/louis-paulin-wXEogo6w3co-unsplash-blurred.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.site-info-container {
+  font-family: "Montserrat";
+  width: fit-content;
+  margin-left: 4em;
+  margin-top: 4em;
+  backdrop-filter: blur(4px);
+}
+
+.welcome h1 {
+  font-weight: 500;
+  font-size: clamp(0.5rem, 2vw, 3rem);
+  line-height: clamp(0.5rem, 2vw, 3rem);
+  letter-spacing: -1px;
+  text-transform: capitalize;
+  color: #ffffff;
+}
+
+.description {
+  margin-top: 2em;
+  width: 45ch;
+  font-style: normal;
+  font-weight: 300;
+  font-size: clamp(0.5rem, 1.3vw, 3rem);
+  line-height: clamp(0.5rem, 1.7vw, 3rem);
+  color: #ffffffb4;
 }
 
 .remove-poi-btn {
@@ -212,8 +270,8 @@ h2 {
   gap: 30px;
   margin-bottom: 30px;
   grid-template-areas:
-  "map map map map aside"
-  "weather weather weather weather aside";
+    "map map map map aside"
+    "weather weather weather weather aside";
 }
 
 #map {
@@ -245,7 +303,7 @@ h2 {
   color: var(--primary_colour);
   background-color: var(--secondary_colour);
   border-radius: 5px;
-  max-height:fit-content;
+  max-height: fit-content;
 }
 
 /* Category Grid CSS */
@@ -255,9 +313,9 @@ h2 {
   grid-template-rows: 400px 400px 400px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-areas:
-  "London London London"
-  "Madrid Madrid Paris"
-  "Amsterdam Amsterdam Berlin";
+    "London London London"
+    "Madrid Madrid Paris"
+    "Amsterdam Amsterdam Berlin";
 }
 
 .heading {
@@ -318,7 +376,6 @@ h2 {
   align-content: end;
 }
 
-
 .dropdown-btn {
   font-size: 15px;
   background-color: #5a1e26;
@@ -338,7 +395,6 @@ footer {
 /* Media Query */
 
 @media screen and (max-width: 1200px) {
-  
   #categoryGrid {
     margin: 0px 5%;
     display: grid;
