--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
   --third_colour: #5a1e26;
 
   --medium-font-size: clamp(1rem, 1.3vw, 2rem);
+  --h1-font-size: clamp(0.5rem, 2vw, 3rem);
 }
 
 /* Resets */
@@ -26,10 +27,6 @@ body {
 }
 
 /* Global Classes */
-
-.hide {
-  display: none;
-}
 
 h2 {
   margin: 20px !important;
@@ -51,6 +48,7 @@ h2 {
   display: flex;
   align-items: center;
   font-size: clamp(0.5rem, 1.4vw, 4rem);
+ 
 }
 
 .name h1 {
@@ -82,7 +80,6 @@ h2 {
 }
 
 .navbar-color {
-  /* background-color: #6B646C; */
   background-color: #e6e6e6;
 }
 
@@ -95,7 +92,7 @@ h2 {
 }
 
 .dropdown-menu {
-  background-color: rgba(255, 255, 255, 0.695) !important ;
+  background-color: rgba(255, 255, 255, 0.89) !important ;
   border-radius: 10px;
   color: rgb(255, 255, 255);
 }
@@ -150,6 +147,7 @@ h2 {
 .hero {
   position: relative;
   min-height: 70vh;
+  margin-bottom: 4em;
 }
 
 .blurred-background {
@@ -174,8 +172,8 @@ h2 {
 .welcome h1,
 .call-to-action {
   font-weight: 500;
-  font-size: clamp(0.5rem, 2vw, 3rem);
-  line-height: clamp(0.5rem, 2vw, 3rem);
+  font-size: var(--h1-font-size);
+  line-height: var(--h1-font-size);
   letter-spacing: -1px;
   text-transform: capitalize;
   color: #ffffff;
@@ -204,16 +202,20 @@ h2 {
   position: relative;
   display: flex;
   justify-content: center;
-  top: 1em;
+  top: 2em;
 }
 
 .categories-dropdown {
   margin: 0;
 }
 
+.dropdown-arrow {
+  height: 1rem;
+}
+
 .searchbox-input {
   font-size: var(--medium-font-size);
-  padding: 1em 0 1em 1em;
+  padding-left: 1em;
   width: 60%;
   border: none;
   background-color: #ce8390 !important;
@@ -225,8 +227,13 @@ h2 {
   color: #fff;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 600000s 0s, color 600000s 0s;
+}
+
 .search-btn {
-  min-height: 100%;
+  margin: 0 !important;
   align-items: center;
   border: none;
   font-size: clamp(0.5rem, 1.4vw, 2rem);
@@ -234,21 +241,20 @@ h2 {
   color: rgb(255, 255, 255) !important ;
 }
 
+.half-circle {
+  height: 4rem;
+}
+
 .magnifying-glass-icon {
-  height: 2rem;
+  height: 1.5rem;
 }
 
 .categories-dropdown-button {
   height: 100%;
-  /* background-color: #ce8390 !important; */
   background-color: black;
   color: #ffffff !important;
   border: none;
-  /* padding: clamp(0.5rem, 2vw, 3rem); */
-}
-
-.categories-dropdown-button:hover {
-  background-color: #4d6a3c !important ;
+  padding-right: 0.4em;
 }
 
 .welcome h5 {
@@ -318,184 +324,50 @@ h2 {
   max-height: fit-content;
 }
 
-/* Category Grid CSS */
-#categoryGrid {
-  margin: 5em 5%;
-  display: grid;
-  grid-template-rows: 400px 400px 400px;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas:
-    "London London London"
-    "Madrid Madrid Paris"
-    "Amsterdam Amsterdam Berlin";
+/* Top cities section */
+
+.top-cities,
+.top-articles {
+  margin: 2em 0;
+  padding: 0 1em;
 }
 
-.heading {
-  background-color: rgba(0, 0, 0, 0.7);
-  padding: 35px;
-  height: 25px;
-  color: white;
-  font-size: 25px;
-  border-bottom: 19px solid#4d6a3c;
+.top-cities h1,
+.top-articles h1 {
+  font-weight: 600;
+  font-size: var(--h1-font-size);
+  letter-spacing: -1px;
 }
 
-#City1 {
-  border-top: 9px solid #e9ddc8;
-  grid-area: London;
-  background-image: url("../images/london.jpg");
-}
-#City2 {
-  border-top: 9px solid #e9ddc8;
-  grid-area: Madrid;
-  background-image: url("../images/madrid.jpg");
+.card-body {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-#City3 {
-  border-top: 9px solid #e9ddc8;
-  grid-area: Paris;
-  background-image: url("../images/paris.jpg");
+.card-title {
+  margin: 0 !important;
+  display: inline-block;
 }
 
-#City4 {
-  border-top: 9px solid #e9ddc8;
-  grid-area: Amsterdam;
-  background-image: url("../images/amsterdam.jpg");
+.card-body img {
+  width: 1rem;
+  display: inline-block;
 }
 
-#City5 {
-  border-top: 9px solid #e9ddc8;
-  grid-area: Berlin;
-  background-image: url("../images/berlin.jpg");
-}
-
-#City1,
-#City2,
-#City3,
-#City4,
-#City5 {
-  text-decoration: none;
-  font-family: "Raleway", sans-serif !important;
-  font-weight: 600 !important;
-}
-
-.categoryGridArea {
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  margin: 5px;
-  cursor: pointer;
-  display: grid;
-  align-content: end;
-}
-
-.dropdown-btn {
-  font-size: 15px;
-  background-color: #5a1e26;
-  border-radius: 10px;
-  color: rgb(255, 255, 255) !important ;
-  box-shadow: 5px color #4d6a3c;
-  padding: 1px 5px;
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
 }
 
 /* Footer */
-footer {
+footer p {
+  background-color: black;
+  color: var(--secondary_colour);
   text-align: center;
-  margin-top: auto;
-  padding-top: 30px;
+  margin: auto 0;
+  padding: 0.3em;
 }
 
 /* Media Query */
-
-@media screen and (max-width: 1200px) {
-  #categoryGrid {
-    margin: 0px 5%;
-    display: grid;
-    grid-template-rows: 500px 500px 500px 500px 800px;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-      "London"
-      "Madrid"
-      "Paris"
-      "Amsterdam"
-      "Berlin";
-  }
-  .weathersection {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin-top: 50px;
-    gap: 20px;
-    margin-bottom: 20px;
-  }
-
-  .col1 {
-    display: grid;
-    grid-template-rows: 700px 500px 700px;
-    grid-template-columns: 1fr;
-    margin-bottom: 20px;
-    grid-template-areas:
-      "map"
-      "weather"
-      "aside";
-  }
-}
-
-@-webkit-keyframes rubberBand {
-  0% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-  30% {
-    -webkit-transform: scale3d(1.25, 0.75, 1);
-    transform: scale3d(1.25, 0.75, 1);
-  }
-  40% {
-    -webkit-transform: scale3d(0.75, 1.25, 1);
-    transform: scale3d(0.75, 1.25, 1);
-  }
-  50% {
-    -webkit-transform: scale3d(1.15, 0.85, 1);
-    transform: scale3d(1.15, 0.85, 1);
-  }
-  65% {
-    -webkit-transform: scale3d(0.95, 1.05, 1);
-    transform: scale3d(0.95, 1.05, 1);
-  }
-  75% {
-    -webkit-transform: scale3d(1.05, 0.95, 1);
-    transform: scale3d(1.05, 0.95, 1);
-  }
-  100% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-}
-@keyframes rubberBand {
-  0% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-  30% {
-    -webkit-transform: scale3d(1.25, 0.75, 1);
-    transform: scale3d(1.25, 0.75, 1);
-  }
-  40% {
-    -webkit-transform: scale3d(0.75, 1.25, 1);
-    transform: scale3d(0.75, 1.25, 1);
-  }
-  50% {
-    -webkit-transform: scale3d(1.15, 0.85, 1);
-    transform: scale3d(1.15, 0.85, 1);
-  }
-  65% {
-    -webkit-transform: scale3d(0.95, 1.05, 1);
-    transform: scale3d(0.95, 1.05, 1);
-  }
-  75% {
-    -webkit-transform: scale3d(1.05, 0.95, 1);
-    transform: scale3d(1.05, 0.95, 1);
-  }
-  100% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-}
