--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
-/* Roots */
-/* Add variables for main colours */
-:root {
+
+
+/* Roots */ /* Add variables for main colours */
+:root  {
   --primary_colour: #4d6a3c;
   --primary-pink-color: #cd8390;
   --secondary-color: #e9ddc8;
@@ -225,6 +226,12 @@ h2 {
   margin: 0;
 }
 
+#select-category {
+  width: 12ch;
+  text-transform: capitalize;
+  overflow: hidden;
+}
+
 .dropdown-arrow {
   height: 1rem;
 }
@@ -283,35 +290,52 @@ input:-webkit-autofill:focus {
 }
 
 .modal-title {
-  text-transform: capitalize ;
+  text-transform: capitalize;
   font-size: var(--h1-font-size);
   font-weight: 700;
-}
-
-.container-1 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.container-2 {
-  margin: 0 auto;
 }
 
 .col1 {
   display: grid;
   grid-template-rows: 700px 200px;
-  grid-template-columns: 4fr 1fr;
-  gap: 30px;
-  margin-bottom: 30px;
+  grid-template-columns: 1.5fr 3fr;
   grid-template-areas:
-    "map map map map aside"
-    "weather weather weather weather aside";
+    "aside map"
+    "aside weather";
+  gap: 1em;
 }
 
 #map {
   grid-area: map;
 }
+
+.map-marker {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--primary-pink-color);
+  color: #fff;
+  height: 2rem;
+  width: 2rem;
+  border-radius: 50%;
+}
+
+.poi-card {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1em;
+}
+
+.poi-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.poi-card_body {
+  padding: .5em
+}
+
 
 .add-to-poi-btn {
   display: flex;
@@ -323,11 +347,11 @@ input:-webkit-autofill:focus {
 
 .add-to-poi-btn h1 {
   margin: 0 0 0 0.2em;
-  color: red;
+  color: rgba(255, 0, 0, 0.26);
 }
 
 .add-to-poi-btn h1:hover {
-  color: rgba(255, 0, 0, 0.26);
+  color: red;
 }
 
 .add-to-poi-btn h1:active {
@@ -339,9 +363,14 @@ input:-webkit-autofill:focus {
   grid-area: aside;
   display: flex;
   flex-direction: column;
-  font-weight: bold;
-  text-decoration: none;
-  column-gap: 0.5rem;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.poi-list-title {
+  text-transform: capitalize;
+  text-align: center;
+
 }
 
 #five-day {
@@ -351,16 +380,12 @@ input:-webkit-autofill:focus {
 .weathersection {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  margin-top: 50px;
-  gap: 20px;
 }
 
 .weather-card {
-  padding: 10px;
   color: var(--primary_colour);
   background-color: var(--secondary-color);
   border-radius: 5px;
-  max-height: fit-content;
 }
 
 /* Top cities section */
