--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,5 @@
-
-
 /* Roots */ /* Add variables for main colours */
-:root  {
+:root {
   --primary_colour: #4d6a3c;
   --primary-pink-color: #cd8390;
   --secondary-color: #e9ddc8;
@@ -295,7 +293,8 @@ input:-webkit-autofill:focus {
   font-weight: 700;
 }
 
-.col1 {
+
+.results-section {
   display: grid;
   grid-template-rows: 700px 200px;
   grid-template-columns: 1.5fr 3fr;
@@ -306,7 +305,8 @@ input:-webkit-autofill:focus {
 }
 
 #map {
-  grid-area: map;
+  width: 100%;
+  height: 100%;
 }
 
 .map-marker {
@@ -315,12 +315,15 @@ input:-webkit-autofill:focus {
   justify-content: center;
   background-color: var(--primary-pink-color);
   color: #fff;
-  height: 2rem;
-  width: 2rem;
+  height: 2.5rem;
+  width: 2.5rem;
   border-radius: 50%;
 }
 
 .poi-card {
+  border-radius: 1rem;
+  padding: 0.5em;
+  border: 0.5px solid var(--primary-pink-color);
   display: flex;
   flex-direction: column;
   margin-bottom: 1em;
@@ -333,9 +336,8 @@ input:-webkit-autofill:focus {
 }
 
 .poi-card_body {
-  padding: .5em
+  padding: 0.5em;
 }
-
 
 .add-to-poi-btn {
   display: flex;
@@ -370,7 +372,6 @@ input:-webkit-autofill:focus {
 .poi-list-title {
   text-transform: capitalize;
   text-align: center;
-
 }
 
 #five-day {
@@ -379,17 +380,23 @@ input:-webkit-autofill:focus {
 
 .weathersection {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 0.5em;
 }
 
 .weather-card {
+  padding: 0.5em;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+  justify-content: center;
   color: var(--primary_colour);
   background-color: var(--secondary-color);
   border-radius: 5px;
 }
 
 /* Top cities section */
-
 .top-cities,
 .top-articles {
   margin: 2em 0;
@@ -439,4 +446,26 @@ footer p {
   .description {
     width: 45ch;
   }
+}
+
+@media screen and (max-width: 992px) {
+
+  .weathersection {
+    display: grid;
+    grid-template-rows: repeat(1,  1fr);
+    grid-template-columns: repeat(4,  1fr);
+  }
+
+  .results-section {
+    display: grid;
+    grid-template-rows: repeat(auto-fit, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-areas:
+      "map"
+      "weather"
+      "aside";
+    gap: 1em;
+  }
+
+  
 }
