--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,7 @@ h2 {
 }
 
 .wishlist button {
+  font-size: 1.5rem;
   background-color: transparent;
   border: none;
   width: 100%;
@@ -142,6 +143,9 @@ h2 {
 }
 
 .wishlist li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1rem;
   font-weight: 600;
   text-align: center;
@@ -150,11 +154,10 @@ h2 {
 .remove-poi-btn {
   border: 1px solid rgba(0, 0, 255, 0.534);
   background-color: transparent;
-  color: rgba(0, 0, 255, 0.527);
-  width: 1.5rem !important;
-  height: 1.5rem !important;
-  border-radius: 50%;
+  color: red;
+  max-width:fit-content;
   font-size: 1rem;
+  margin-left: .3em;
 }
 
 .hero {
@@ -467,5 +470,14 @@ footer p {
     gap: 1em;
   }
 
-  
+  .weathersection {
+    grid-template-columns: 1fr;
+  }
+
+  .weather-card {
+    flex-direction: row;
+    justify-content:space-evenly;
+    align-items: center;
+    font-size: 1rem;;
+  }
 }
